--- a/index.html
+++ b/index.html
@@ -3,55 +3,205 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pet Adoption Matchmaker</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <!-- Inline CSS for styling -->
+    <style>
+        /* Basic Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f8fb;
+            color: #333;
+            margin: 0;
+        }
+
+        header {
+            background-color: #ff8a00;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 36px;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        /* Form Section */
+        .form-section {
+            background-color: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+        }
+
+        .form-section h2 {
+            font-size: 28px;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        label {
+            font-size: 16px;
+            margin-bottom: 5px;
+            display: block;
+            color: #444;
+        }
+
+        select, input[type="number"], input[type="radio"] {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+
+        input[type="radio"] {
+            width: auto;
+            margin-right: 10px;
+        }
+
+        .button {
+            background-color: #ff8a00;
+            color: white;
+            padding: 15px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 20px;
+        }
+
+        .button:hover {
+            background-color: #e07b00;
+        }
+
+        /* Pet Recommendation Section */
+        .recommendation-section {
+            text-align: center;
+        }
+
+        .recommended-pet {
+            background-color: #ffffff;
+            padding: 20px;
+            margin-top: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .recommended-pet h3 {
+            font-size: 24px;
+            color: #333;
+        }
+
+        .recommended-pet p {
+            font-size: 18px;
+            color: #555;
+        }
+    </style>
 </head>
 <body>
+
     <header>
-        <h1>Find Your Perfect Pet!</h1>
-        <p>Answer a few questions and get pet recommendations based on your lifestyle!</p>
+        <h1>Pet Adoption Matchmaker</h1>
+        <p>Find the perfect pet for your lifestyle!</p>
     </header>
 
-    <main>
-        <section class="quiz">
-            <h2>Let's Get Started</h2>
-            <form id="quizForm">
-                <label for="livingSituation">What type of living environment do you have?</label>
-                <select id="livingSituation" name="livingSituation">
-                    <option value="house">House</option>
-                    <option value="apartment">Apartment</option>
-                    <option value="condo">Condo</option>
+    <div class="container">
+        <section class="form-section">
+            <h2>Answer a few questions to find your perfect pet!</h2>
+            <div class="form-group">
+                <label for="livingSpace">How much space do you have?</label>
+                <select id="livingSpace">
+                    <option value="small">Small (Apartment, Studio)</option>
+                    <option value="medium">Medium (House, Condo)</option>
+                    <option value="large">Large (Farmhouse, Estate)</option>
                 </select>
+            </div>
 
-                <label for="timeForExercise">How much time can you dedicate to exercise your pet daily?</label>
-                <select id="timeForExercise" name="timeForExercise">
-                    <option value="low">Less than 30 minutes</option>
-                    <option value="medium">30-60 minutes</option>
-                    <option value="high">More than 1 hour</option>
+            <div class="form-group">
+                <label for="activityLevel">What's your activity level?</label>
+                <select id="activityLevel">
+                    <option value="low">Low (I prefer relaxing)</option>
+                    <option value="medium">Medium (I like some outdoor activities)</option>
+                    <option value="high">High (I love being active and going out)</option>
                 </select>
+            </div>
 
+            <div class="form-group">
+                <label for="timeAtHome">How much time do you spend at home daily?</label>
+                <input type="number" id="timeAtHome" placeholder="Enter number of hours">
+            </div>
+
+            <div class="form-group">
                 <label for="petType">Do you prefer a dog or a cat?</label>
-                <select id="petType" name="petType">
-                    <option value="dog">Dog</option>
-                    <option value="cat">Cat</option>
-                </select>
+                <input type="radio" id="dog" name="petType" value="dog"><label for="dog">Dog</label>
+                <input type="radio" id="cat" name="petType" value="cat"><label for="cat">Cat</label>
+            </div>
 
-                <button type="submit">See My Pet Match</button>
-            </form>
+            <button class="button" onclick="findPet()">Find My Pet</button>
         </section>
 
-        <section class="results" id="results" style="display: none;">
-            <h2>Your Recommended Pet:</h2>
-            <p id="petRecommendation"></p>
-            <button id="newRecommendation">Get Another Recommendation</button>
+        <section class="recommendation-section" id="recommendationSection" style="display: none;">
+            <h2>Recommended Pet for You</h2>
+            <div class="recommended-pet" id="recommendedPet">
+                <!-- The pet recommendation will appear here -->
+            </div>
         </section>
-    </main>
+    </div>
 
-    <footer>
-        <p>Powered by Pet Adoption Matchmaker</p>
-    </footer>
+    <!-- Inline JavaScript -->
+    <script>
+        function findPet() {
+            const livingSpace = document.getElementById("livingSpace").value;
+            const activityLevel = document.getElementById("activityLevel").value;
+            const timeAtHome = document.getElementById("timeAtHome").value;
+            const petType = document.querySelector('input[name="petType"]:checked')?.value;
 
-    <script src="script.js"></script>
+            // Simple recommendation logic (based on selected options)
+            let recommendedPet = "No recommendation available. Please fill out all fields.";
+            if (livingSpace && activityLevel && timeAtHome && petType) {
+                if (petType === "dog") {
+                    if (livingSpace === "small" && activityLevel === "low") {
+                        recommendedPet = "Chihuahua - A small and low-energy dog.";
+                    } else if (livingSpace === "large" && activityLevel === "high") {
+                        recommendedPet = "Golden Retriever - A large, active dog.";
+                    } else {
+                        recommendedPet = "Labrador Retriever - A good medium-sized, versatile dog.";
+                    }
+                } else if (petType === "cat") {
+                    if (livingSpace === "small" && activityLevel === "low") {
+                        recommendedPet = "Persian Cat - A calm, indoor cat.";
+                    } else if (livingSpace === "large" && activityLevel === "high") {
+                        recommendedPet = "Siamese Cat - Energetic and active cat.";
+                    } else {
+                        recommendedPet = "Maine Coon - A friendly and active cat.";
+                    }
+                }
+
+                // Display the recommendation
+                document.getElementById("recommendedPet").innerHTML = recommendedPet;
+                document.getElementById("recommendationSection").style.display = "block";
+            } else {
+                alert("Please fill out all fields.");
+            }
+        }
+    </script>
 </body>
 </html>
+
